portfolio items: fixed responsiveness on small screen
centered images on small text

--- a/css/styles.css
+++ b/css/styles.css
@@ -616,6 +616,13 @@ progress {
 .portfolio-image{
   width: 330px;
   height: 320px;
+  font-family: lato, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.portfolio-text{
+  color: bs-gray-900;
+  font-size:1.25rem;
+  font-weight:300;
 }
 
 .figure {
